--- a/backend/mediaserver/package.json
+++ b/backend/mediaserver/package.json
@@ -36,6 +36,7 @@
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.12.0",
-    "tscpaths": "^0.0.9"
+    "tscpaths": "^0.0.9",
+    "typescript": "4.9.5"
   }
 }
