--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@quasar/extras": "^1.0.0",
     "@types/aframe": "^1.2.0",
     "@types/await-timeout": "^0.3.1",
+    "@types/web-bluetooth": "^0.0.17",
     "aframe": "^1.3.0",
     "await-timeout": "^1.1.1",
     "axios": "^0.21.1",
@@ -25,6 +26,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "mediasoup-client": "^3",
+    "microbit-web-bluetooth": "^0.6.0",
     "pinia": "^2.0.11",
     "pinia-plugin-persistedstate": "^1.5.1",
     "quasar": "^2.6.0",
@@ -34,7 +36,8 @@
     "typed-emitter": "^2.1.0",
     "uuid": "^8.3.2",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "web-bluetooth": "^0.1.2"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0",
